<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoChan</string>
    <string name="image_desc">Attached image</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="threads">Threads:</string>
    <string name="no_threads">Loading threads&#8230;</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="desc">desc</string>
    <string name="placeholder_postby">Posted by Anon </string>
    <string name="placeholder_date">On Feb.13,2014 at 6:52pm</string>
    <string name="username">Anon</string>
    <string name="titleHint">Title (Required)</string>
    <string name="commentHint">What would you like to say?</string>
    <string name="action_add_thread">Add Thread</string>
    <string name="comments">Comments:</string>
    <string name="device_id"/>
    <string name="device_hash"/>
    <string name="attach_image">Add Image</string>
    <string name="post">Post</string>
    <string name="location">Location</string>
    <string name="placeholder_location">location text</string>
    <string name="thread_view_op_reply">Reply to OP</string>
    <string name="op_replyingTo">Replying to:</string>
    <string name="placeholder_latitude">Latitude</string>
    <string name="placeholder_longitude">Longitude</string>
    <string name="current_location_button_text">Use Current Location</string>
    <string name="new_location_button_text">Submit New Location</string>
    <string name="location_log">Your previously used locations:</string>
    <string name="reply">Reply</string>
    <string name="comment_reply_button">Reply</string>
    <string name="comment_star_button">Favourite</string>
    <string name="action_refresh">Refresh from Server</string>
    <string name="thread_sort">Sorting Method</string>
    <string name="date_new">Date (Newest)</string>
    <string name="date_old">Date (Oldest)</string>
    <string name="score_highest">Relevance (Highest)</string>
    <string name="score_lowest">Relevance (Lowest)</string>
    <string name="sort_location">Location</string>
    <string name="sort_image">Image</string>
    <string name="favourites">Favourites</string>
    <string name="threads_fav">Threads</string>
    <string name="comments_fav">Comments</string>
    <string name="get_directions_button_text">Get Directions</string>
    <string name="attach_image_title">Attach Image</string>
    <string name="attach_image_dialog">Select a source:</string>
    <string name="image_thumb">Image Thumbnail</string>
    <string name="Image">Image</string>
    <string name="select_location_from_map">Select Location on Map</string>
    <string name="submit_location_map_button">Submit</string>
    <string name="depth">Max Depth +1</string>
    <string name="save_image">Save Image</string>
    <string name="make_edit">Post Edit</string>
    <string name="comment_being_edited">Comment Being Edited:</string>
    <string name="edit_image">Edit Image</string>
    <string name="edit_location">Edit Location</string>
    <string name="camera_dialog">Camera</string>
    <string name="gallery_dialog">Gallery</string>
    <string name="update_dialog_title">Update Data</string>
    <string name="update_dialog_body">Internet connection detected. Would you like to get the latest and greatest data?</string>
    <string name="legal_chars">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890~`!@#$%^&amp;*()_-+={[}]|\ \\:; \&quot;\'\"&lt;,&gt;.?\\ \\	/</string>

</resources>
