<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_add_thread"
          android:icon="@drawable/ic_action_chat"
          android:title="@string/action_add_thread"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/thead_sort"
          android:icon="@drawable/ic_sort_methods"
          android:title="@string/thread_sort"
          android:showAsAction="ifRoom">
        	
        <menu>
        <group android:checkableBehavior="single">
        <item android:id="@+id/thread_sort_score_high"
              android:checked="true"
              android:title="@string/score_highest"/>
        
        <item android:id="@+id/thread_sort_score_low"
              android:title="@string/score_lowest"/>
        
        <item android:id="@+id/thread_sort_date_new"
              android:title="@string/date_new"/>
        
        <item android:id="@+id/thread_sort_date_old"
              android:title="@string/date_old"/>
        
        <item android:id="@+id/thread_sort_location"
              android:title="@string/sort_location"/>
        </group>
        </menu>
        
    </item>
    
    <item android:id="@+id/action_favourites"
          android:icon="@drawable/ic_favourites"
          android:title="@string/favourites"
          android:showAsAction="ifRoom" />
        
</menu>
