<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/threadTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="5dp"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/commentBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/threadTitle"
        android:layout_toLeftOf="@+id/thread_list_thumbnail"
        android:ellipsize="marquee"
        android:maxLines="4"
        android:text="@string/lorem_ipsum"
        android:paddingLeft="5dp"
        android:textColor="#65000000" />

    <TextView
        android:id="@+id/commentBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/commentBody"
        android:text="@string/placeholder_postby"
        android:paddingLeft="5dp"
        android:textColor="#f00" />

    <TextView
        android:id="@+id/commentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/commentBy"
        android:text="@string/placeholder_date"
        android:paddingLeft="5dp"
        android:textColor="#f00" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/commentDate"
        android:paddingLeft="5dp"
        android:text="@string/placeholder_location" />
    
    <ImageButton
        android:id="@+id/thread_list_thumbnail"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/commentBy"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/commentBody"
        android:contentDescription="@string/image_desc"
        android:visibility="gone"
        android:background="@null"
        android:src="@null" />

</RelativeLayout>
