<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/comment_editing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/old_thumb"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/comment_being_edited"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/old_comment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/hello_world"
        android:layout_toLeftOf="@+id/old_thumb"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:maxLines ="5"
		android:scrollbars = "vertical"
        android:layout_below="@+id/comment_editing" />
    
    <ImageView
        android:id="@+id/old_thumb"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/old_comment_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/image_desc"
        android:paddingBottom="2dp"
        android:paddingRight="2dp"
        android:paddingTop="2dp"
        android:src="@drawable/rect2" />
    
    <EditText
        android:id="@+id/editBody"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/old_comment_text"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/commentHint"
        android:scrollbars="vertical"
        android:digits="@string/legal_chars" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/edit_location_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/rounded_button_selector"
            android:onClick="changeLocation"
            android:text="@string/location"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:ellipsize="end" />

        <Button
            android:id="@+id/attach_image_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0.33"
            android:background="@drawable/rounded_button_selector"
            android:onClick="editImage"
            android:text="@string/attach_image" />

        <Button
            android:id="@+id/post_edit_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0.33"
            android:background="@drawable/rounded_button_selector"
            android:onClick="makeEdit"
            android:text="@string/make_edit" />
    </LinearLayout>

</RelativeLayout>