<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/comment_replyingTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/post_thumbnail"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/op_replyingTo"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/reply_to_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/hello_world"
        android:layout_toLeftOf="@+id/post_thumbnail"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:maxLines ="5"
		android:scrollbars = "vertical"
        android:layout_below="@+id/comment_replyingTo" />
    
    <ImageView
        android:id="@+id/post_thumbnail"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/reply_to_body"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/image_desc"
        android:paddingBottom="2dp"
        android:paddingRight="2dp"
        android:paddingTop="2dp"
        android:src="@drawable/rect2" />
    
    <EditText
        android:id="@+id/replyBody"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/reply_to_body"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/commentHint"
        android:scrollbars="vertical" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/location_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/rounded_button_selector"
            android:onClick="changeLocation"
            android:text="@string/location" />

        <Button
            android:id="@+id/attach_image_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0.33"
            android:background="@drawable/rounded_button_selector"
            android:onClick="attachImageToThread"
            android:text="@string/attach_image" />

        <Button
            android:id="@+id/post_reply_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0.33"
            android:background="@drawable/rounded_button_selector"
            android:onClick="postNewThread"
            android:text="@string/post" />
    </LinearLayout>

</RelativeLayout>