<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/thread_view_comment_commentBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/imageButton1"
        android:layout_toRightOf="@+id/imageView1"
        android:paddingRight="5dp"
        android:text="@string/lorem_ipsum" />
    
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/thread_view_comment_commentBody"
        android:layout_alignParentTop="true"
        android:src="@android:drawable/gallery_thumb" 
        android:contentDescription="@string/image_desc" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/thread_view_comment_locationText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@+id/imageView1"
        android:src="@drawable/ic_lvl_1" />

    <TextView
        android:id="@+id/thread_view_comment_commentBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/thread_view_comment_commentBody"
        android:layout_below="@+id/thread_view_comment_commentBody"
        android:text="@string/placeholder_postby"
        android:textColor="#00f" />

    <TextView
        android:id="@+id/thread_view_comment_locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/thread_view_comment_commentBody"
        android:layout_below="@+id/thread_view_comment_commentDate"
        android:text="@string/placeholder_location"
        android:textColor="#2E8B57" />

    <TextView
        android:id="@+id/thread_view_comment_commentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/thread_view_comment_commentBody"
        android:layout_below="@+id/thread_view_comment_commentBy"
        android:text="@string/placeholder_date"
        android:textColor="#00f" />

</RelativeLayout>